- New SignatureManager class with its models - Visual signatures of the left and right borders of CharacterInfoBox described - New hasValidSignature method in PixelInspectionUtils class - CharacterInfoBoxLocator class adapted for functionality with SignatureManager - New KeyPressUtils class - Fixed multithreaded read/write issue of the subscribers array in CaptureDispatcher - New plugins added to the pom file - GameWindow adjusted to support Java 17